# HoverBot

./: .gitignore  CMakeLists.txt  README.md  build.conf  build.py
external-controllers/: explanation.txt
external-controllers/main/: main.ino
include/: PID.h  SSD1306.h  Servo.h  Stabilizer.h  engines.h  fonts.h  gyro.h  log.h  read_cfg.h  speak.h
logs/: logs.txt
python/: TTS.py
src/: PID.cpp  SSD1306.cpp  Servo.cpp  Stabilizer.cpp  engines.cpp  log.cpp  main.cpp  read_cfg.cpp  speak.cpp
src/movement/: Servo.cpp  engines.cpp
src/sensors/: gyro.cpp
tts/: Makefile  app.go  go.mod
